# XYMusic

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/util/: LogUtil.h
app/src/main/java/com/open/xymusic/: MainActivity.java
ffmpegInclude/: README.md  settings.gradle
ffmpegInclude/app/src/main/cpp/: native-lib.cpp
ffmpegInclude/app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
xymusic/: README.md
xymusic/app/: build.gradle
xymusic/app/src/androidTest/java/com/open/xymusic/: ExampleInstrumentedTest.java
xymusic/app/src/main/java/com/open/xymusic/: MainActivity.java
xymusic/app/src/main/res/values/: strings.xml
xymusic/app/src/test/java/com/open/xymusic/: ExampleUnitTest.java
